--- a/CountdownPresets/AndroidManifest.xml
+++ b/CountdownPresets/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="ro.pagepo.countdownpresets.CountdownActivity"
+            android:label="@string/title_activity_countdown" >
+        </activity>
     </application>
 
 </manifest>
