--- a/CountdownPresets/AndroidManifest.xml
+++ b/CountdownPresets/AndroidManifest.xml
@@ -26,6 +26,12 @@
             android:name="ro.pagepo.countdownpresets.CountdownActivity"
             android:label="@string/title_activity_countdown" >
         </activity>
+
+        <service
+            android:name="ro.pagepo.countdownpresets.CountdownTimerService"
+            android:enabled="false"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
