--- a/CountdownPresets/bin/AndroidManifest.xml
+++ b/CountdownPresets/bin/AndroidManifest.xml
@@ -29,8 +29,8 @@
 
         <service
             android:name="ro.pagepo.countdownpresets.CountdownTimerService"
-            android:enabled="false"
-            android:exported="false" >
+            android:enabled="true"
+            android:exported="true" >
         </service>
     </application>
 
